navbar active color

--- a/Web_Project/WebApp/Templates/Base_Product_User.html
+++ b/Web_Project/WebApp/Templates/Base_Product_User.html
@@ -33,6 +33,10 @@
         .product-user-buy {
             padding-top: 6rem;
         }
+
+        .navbar-custom .nav-item .nav-link.purchase_history {
+            color:  #14bf98!important;
+        }
     </style>
 </head>
 <body>
