--- a/Web_Project/WebApp/Templates/Base_ViewCart.html
+++ b/Web_Project/WebApp/Templates/Base_ViewCart.html
@@ -33,6 +33,10 @@
         .cart-product-information {
             padding-top: 6rem;
         }
+
+        .navbar-custom .nav-item .nav-link.icon-shopping-cart {
+            color:  #14bf98!important;
+        }
     </style>
 </head>
 <body data-target=".fixed-top">
