--- a/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
@@ -44,7 +44,7 @@
 
                 {% if user.customer.type == "US" %}
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="{% url 'Page:page_ViewProductUserBuy' user.id %}">PURCHASE HISTORY</a>
+                        <a class="nav-link page-scroll purchase_history" href="{% url 'Page:page_ViewProductUserBuy' user.id %}">PURCHASE HISTORY</a>
                     </li>
                 
 
