--- a/Web_Project/WebApp/Templates/Base_UI_WithLogIn.html
+++ b/Web_Project/WebApp/Templates/Base_UI_WithLogIn.html
@@ -23,6 +23,9 @@
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
+    <!-- ajax-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     {% load static %}
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/fontawesome-all.css' %}" rel="stylesheet">
@@ -83,6 +86,9 @@
                 </li>
 
                 {% if user.customer.type == "US" %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'Page:page_ViewHistory' user.id %}">HISTORY</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="{% url 'Page:page_ViewProductUserBuy' user.id %}">PURCHASE HISTORY</a>
                     </li>
