Navigation Bar green focus mod

--- a/Web_Project/WebApp/Templates/Base_History.html
+++ b/Web_Project/WebApp/Templates/Base_History.html
@@ -34,7 +34,7 @@
             padding-top: 6rem;
         }
 
-        .navbar-custom .nav-item .nav-link.purchase_history {
+        .navbar-custom .nav-item .nav-link.history {
             color:#14bf98!important;
         }
     </style>
