--- a/Web_Project/WebApp/Templates/Base_Product_User.html
+++ b/Web_Project/WebApp/Templates/Base_Product_User.html
@@ -34,7 +34,7 @@
             padding-top: 6rem;
         }
         
-        .navbar-custom .nav-item .nav-link.purchase_history {
+        .navbar-custom .nav-item .nav-link.bill_status {
             color:#14bf98!important;
         }
     </style>
