--- a/Web_Project/WebApp/Templates/Base_ViewCart.html
+++ b/Web_Project/WebApp/Templates/Base_ViewCart.html
@@ -95,16 +95,33 @@
 
             <div class="col mb-2">
                 <div class="row">
-                    <div class="col-sm-12  col-md-6">
-                        <button class="btn btn-block btn-light">Tiếp tục mua sắm</button>
-                    </div>
-                    <div class="col-sm-6 col-md-3 text-right">
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <!-- <div class="col-sm-12  col-md-3">
+                            <button class="btn btn-block btn-light">Tiếp tục mua sắm</button>
+                        </div>     -->
+                        
+                            <button class="btn btn-block btn-light">Tiếp tục mua sắm</button>
+                         
+                    </td>
+                    <td>
+                        <!-- <div class="col-sm-6 col-md-3 text-right">
+                            <button class="btn btn-lg btn-block btn-success text-uppercase">
+                                <span class="" onclick="document.getElementById('id{{item.id}}').style.display='block'"
+                                      data-toggle="tooltip" title="Thanh toán">Thanh toán
+                                </span>
+                            </button>
+                        </div> -->
                         <button class="btn btn-lg btn-block btn-success text-uppercase">
                             <span class="" onclick="document.getElementById('id{{item.id}}').style.display='block'"
                                   data-toggle="tooltip" title="Thanh toán">Thanh toán
                             </span>
                         </button>
-                    </div>
+                    </td>
+                    
                 </div>
             </div>
         </div>
