--- a/Web_Project/WebApp/Templates/Base_ViewCart.html
+++ b/Web_Project/WebApp/Templates/Base_ViewCart.html
@@ -52,13 +52,13 @@
                                 <td>Còn hàng</td>
 
                                 <!-- Product Quantity -->
-                                <td class="text-center">
-                                    {% if item.num > 1 %}
-                                    <a href="" class="fa fa-minus" style="text-decoration:none"></a>
+                                <td class="text-center">{% if item.num > 1 %}
+                                    <button onclick="minus({{item.id}})" class="fa fa-minus"></button>
                                     {% elif item.num == 1 %}
-                                    <a href="" class="fa fa-minus" style="text-decoration:none"></a>
-                                    {% endif %}&nbsp;<input type="text" name="" value="{{item.num}}" size="3">&nbsp;
-                                    <a href="" class="fa fa-plus" style="text-decoration:none"></a>
+                                    <button onclick="minus({{item.id}})" class="fa fa-minus"></button>
+                                    {% endif %}&nbsp;
+                                    <input type="text" name="" value="{{item.num}}" size="3">&nbsp;
+                                    <button onclick="plus({{item.id}})" class="fa fa-plus"></button>
                                 </td>
 
                                 <!-- Product price -->
@@ -75,7 +75,21 @@
                                 </td>
                             </tr>
                             {% endfor %}
-                            
+                            <script>
+                                $(document).ready(function() {
+                                    //alert("load Ok");
+                                });
+                                function minus(id){
+                                    $.post('/minus', {'id':id, 'csrfmiddlewaretoken':'{{csrf_token}}'}, function(data){
+                                       alert("Bạn vừa giảm số lượng thêm 1!");
+                                    });
+                                }
+                                function plus(id){
+                                    $.post('/plus', {'id':id, 'csrfmiddlewaretoken':'{{csrf_token}}'}, function(data){
+                                       alert("Bạn vừa tăng số lượng thêm 1!");
+                                    });
+                                }
+                            </script>
                             {% if cartItem|length != 0%}
                             <tr>
                                 <td></td>
