--- a/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
@@ -38,10 +38,10 @@
                     <a class="nav-link" href="{% url 'Page:page_Index_User' %}">TRANG CHỦ<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'Page:page_blog_page' %}">BÀI VIẾT</a>
+                    <a class="nav-link posts-page" href="{% url 'Page:page_blog_page' %}">BÀI VIẾT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#projects">MẶT HÀNG</a>
+                    <a class="nav-link products-page" href="#projects">MẶT HÀNG</a>
                 </li>
 
                 {% if user.customer.type == "US" %}
