--- a/Web_Project/WebApp/Templates/Base_UI_WithLogIn.html
+++ b/Web_Project/WebApp/Templates/Base_UI_WithLogIn.html
@@ -231,14 +231,13 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="{% static 'image/services-1.jpg' %}" alt="alternative">
+                            <img class="img-fluid" src="{% static 'image/featured-pic-1-1.jpg' %}" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">BÀI VIẾT 1</h3>
-                            <p>Đây là description cho Bài viết 1, nó không dài lắm</p>
+                            <h3 class="card-title">Cảm hứng cổ điển “hồi sinh” thổi làn gió mới vào xu hướng phụ kiện thu đông 2019</h3>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">ĐỌC THÊM</a>
+                            <a class="btn-solid-reg page-scroll" href="{% url 'Page:page_blog_page_1_1' %}">ĐỌC THÊM</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -246,14 +245,13 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="{% static 'image/services-2.jpg' %}" alt="alternative">
+                            <img class="img-fluid" src="{% static 'image/featured-pic-2-1.jpg' %}" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">BÀI VIẾT 2</h3>
-                            <p>Đây là description cho Bài Viết 2, nó cũng không dài lắm</p>
+                            <h3 class="card-title">Sự lên ngôi của 6 xu hướng hứa hẹn sẽ làm bùng nổ làng thời trang Thu Đông 2019</h3>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">ĐỌC THÊM</a>
+                            <a class="btn-solid-reg page-scroll" href="{% url 'Page:page_blog_page_1_2' %}">ĐỌC THÊM</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -261,14 +259,13 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="{% static 'image/services-3.jpg' %}" alt="alternative">
+                            <img class="img-fluid" src="{% static 'image/featured-pic-3.jpg' %}" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">BÀI VIẾT 3</h3>
-                            <p>Đây là description cho Bài viết 3, nó cũng không dài lắm</p>
+                            <h3 class="card-title">“Học lỏm” tuyệt chiêu mix&match outfit mùa hè “chuẩn” như Ninh Dương Lan Ngọc cùng loạt sao Việt</h3>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">ĐỌC THÊM</a>
+                            <a class="btn-solid-reg page-scroll" href="{% url 'Page:page_blog_page_1_3' %}">ĐỌC THÊM</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -486,7 +483,7 @@
             </div> <!-- end of row -->
             <div class="row to-product-page">
                 <div class = "col-lg-12 text-center">
-                    <a class="btn-solid-lg" href="{% url 'Page:page_blog_page' %}">CHI TIẾT SẢN PHẨM</a>
+                    <a class="btn-solid-lg" href="#">CHI TIẾT SẢN PHẨM</a>
                 </div>
                 
             </div>
