--- a/Web_Project/WebApp/Templates/Base_UI_WithoutLogIn.html
+++ b/Web_Project/WebApp/Templates/Base_UI_WithoutLogIn.html
@@ -55,7 +55,45 @@
     </div>
     <!-- end of preloader -->
 
-    {% include 'NavigationBar/nav.html' %}
+    <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
+        <!-- Text Logo - Use this if you don't have a graphic logo -->
+        <a class="navbar-brand logo-text page-scroll" href="{% url 'Page:page_Index_Page' %}">WOW</a>
+        
+        <!-- Mobile Menu Toggle Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-awesome fas fa-bars"></span>
+            <span class="navbar-toggler-awesome fas fa-times"></span>
+        </button>
+        <!-- end of mobile menu toggle button -->
+
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="#header">TRANG CHỦ<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="#intro">GIỚI THIỆU</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="#posts">BÀI VIẾT</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="#projects">MẶT HÀNG</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="#contact">LIÊN HỆ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="{% url 'Page:page_login' %}">ĐĂNG NHẬP</a>
+                </li>
+            </ul>
+        </div>
+    </nav> <!-- end of navbar -->
+    <!-- end of navbar -->
 
     <!-- Header -->
     <header id="header" class="header">
@@ -167,14 +205,13 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="{% static 'image/services-1.jpg' %}" alt="alternative">
+                            <img class="img-fluid" src="{% static 'image/featured-pic-1-1.jpg' %}" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">BÀI VIẾT 1</h3>
-                            <p>Đây là description cho Bài viết 1, nó không dài lắm</p>
+                            <h3 class="card-title">Cảm hứng cổ điển “hồi sinh” thổi làn gió mới vào xu hướng phụ kiện thu đông 2019</h3>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">ĐỌC THÊM</a>
+                            <a class="btn-solid-reg page-scroll" href="{% url 'Page:page_blog_page_1_1' %}">ĐỌC THÊM</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -182,14 +219,13 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="{% static 'image/services-2.jpg' %}" alt="alternative">
+                            <img class="img-fluid" src="{% static 'image/featured-pic-2-1.jpg' %}" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">BÀI VIẾT 2</h3>
-                            <p>Đây là description cho Bài Viết 2, nó cũng không dài lắm</p>
+                            <h3 class="card-title">Sự lên ngôi của 6 xu hướng hứa hẹn sẽ làm bùng nổ làng thời trang Thu Đông 2019</h3>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">ĐỌC THÊM</a>
+                            <a class="btn-solid-reg page-scroll" href="{% url 'Page:page_blog_page_1_2' %}">ĐỌC THÊM</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -197,14 +233,13 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="{% static 'image/services-3.jpg' %}" alt="alternative">
+                            <img class="img-fluid" src="{% static 'image/featured-pic-3.jpg' %}" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">BÀI VIẾT 3</h3>
-                            <p>Đây là description cho Bài viết 3, nó cũng không dài lắm</p>
+                            <h3 class="card-title">“Học lỏm” tuyệt chiêu mix&match outfit mùa hè “chuẩn” như Ninh Dương Lan Ngọc cùng loạt sao Việt</h3>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">ĐỌC THÊM</a>
+                            <a class="btn-solid-reg page-scroll" href="{% url 'Page:page_blog_page_1_3' %}">ĐỌC THÊM</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -506,7 +541,7 @@
             </div> <!-- end of row -->
             <div class="row to-product-page">
                 <div class="col-lg-12 text-center">
-                    <a class="btn-solid-lg" href="{% url 'Page:page_blog_page' %}">CHI TIẾT SẢN PHẨM</a>
+                    <a class="btn-solid-lg" href="#">CHI TIẾT SẢN PHẨM</a>
                 </div>
 
             </div>
