--- a/Web_Project/WebApp/Templates/NavigationBar/Blog_Page.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/Blog_Page.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% if user.customer.type == "US" or user.customer.type == "MN" %}
+      {% include 'NavigationBar/nav_User_or_Manager.html' %}
+{% else %}
+      {% include 'NavigationBar/nav.html' %}
+{% endif %}
