--- a/Web_Project/WebApp/Templates/NavigationBar/nav.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/nav.html
@@ -33,23 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#header">TRANG CHỦ<span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll" href="{% url 'Page:page_Index_Page' %}">TRANG CHỦ<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#intro">GIỚI THIỆU</a>
+                    <a class="nav-link page-scroll posts-page" href="{% url 'Page:page_blog_page' %}">BÀI VIẾT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#posts">BÀI VIẾT</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
-                </li> -->
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#projects">MẶT HÀNG</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">LIÊN HỆ</a>
+                    <a class="nav-link page-scroll products-page" href="#projects">MẶT HÀNG</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="{% url 'Page:page_login' %}">ĐĂNG NHẬP</a>
