update change password

--- a/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
@@ -72,7 +72,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'Page:page_logout_user' %}"><span class="item-text"><i class="fas fa-sign-out-alt"></i> Log out</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="#"><span class="item-text"><i class="fas fa-lock"></i> Change Password</span></a>
+                        <a class="dropdown-item" href="{% url 'Page:change_password' %}"><span class="item-text"><i class="fas fa-lock"></i> Change Password</span></a>
                     </div>
                 </li>
             </ul>
