--- a/Web_Project/WebApp/Templates/Form/form_deleteProduct.html
+++ b/Web_Project/WebApp/Templates/Form/form_deleteProduct.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <header class="w3-container w3-light-blue">
+    <!-- <header class="w3-container w3-light-blue">
         <span onclick="document.getElementById('{{item.id}}').style.display='none'"
           class="w3-button w3-display-topright">&times;</span>
         <h4 align="center" style="color: #000099"><strong>Thông báo từ sản phẩm {{item.id_product}}</strong></h4>
@@ -33,6 +33,33 @@
             </span>
         </div>
         <br>
+    </div> -->
+
+    <!-- Modal to create confirm box -->
+    <div class="modal fade" id="delete_form" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h6 class="modal-title" id="exampleModalLongTitle">Xác nhận xóa sản phẩm</h6>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body text-left">
+            <p>
+                Bạn có chắc muốn xóa sản phẩm <b>{{item.id_product}}</b> ?
+            </p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy bỏ</button>
+            <button type="button" class="btn btn-primary" >
+                <a href="{% url 'Page:page_DeleteCart' user.id item.id %}" 
+                    style="text-decoration:none; color: white">Xác nhận
+                </a>
+            </button>
+        </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
