--- a/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
@@ -55,14 +55,14 @@
 
                     <li class="nav-item">
                         <a href="{% url 'Page:page_BaseViewCart' user.id %}" class="icon-shopping-cart nav-link">
-                            <i class="fa">&#xf07a;<span class='badge badge-warning' id='lblCartCount'> 5 </span></i>  
+                            <i class="fa">&#xf07a;<span class='badge badge-warning' id='lblCartCount'>  </span></i>
                         </a>
                     </li>
                 {% endif %}
 
                 {% if user.customer.type == "MN" %}
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#">PURCHASE MANAGEMENT</a>
+                        <a class="nav-link page-scroll" href="{% url 'Page:page_Manager' %}">PURCHASE MANAGEMENT</a>
                     </li>
                 {% endif %}
                 <!-- Dropdown Menu -->          
