product-list update

--- a/Web_Project/WebApp/Templates/Base_UI_WithoutLogIn.html
+++ b/Web_Project/WebApp/Templates/Base_UI_WithoutLogIn.html
@@ -541,7 +541,7 @@
             </div> <!-- end of row -->
             <div class="row to-product-page">
                 <div class="col-lg-12 text-center">
-                    <a class="btn-solid-lg" href="#">CHI TIẾT SẢN PHẨM</a>
+                    <a class="btn-solid-lg" href="{% url 'Page:page_product_list' %}">CHI TIẾT SẢN PHẨM</a>
                 </div>
 
             </div>
