--- a/Web_Project/WebApp/Templates/NavigationBar/nav.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/nav.html
@@ -39,7 +39,7 @@
                     <a class="nav-link page-scroll posts-page" href="{% url 'Page:page_blog_page' %}">BÀI VIẾT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll products-page" href="#projects">MẶT HÀNG</a>
+                    <a class="nav-link page-scroll products-page" href="{% url 'Page:page_product_list' %}">MẶT HÀNG</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="{% url 'Page:page_login' %}">ĐĂNG NHẬP</a>
